# ansible-role-tripleo-swift

./: .gitreview  README.md  ansible.cfg  setup.cfg
meta/: main.yml
